deploy: 45b801d56968c65d30cab92dbf4c04d3d70711ee

--- a/404.html
+++ b/404.html
@@ -70,16 +70,19 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/event><span>Events</span></a>
+<a class=nav-link href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/publication><span>Publications</span></a>
+<a class=nav-link href=/event><span>Events</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=/contacts><span>Contacts</span></a>
 </li>
 </ul>
 </div>
@@ -114,7 +117,8 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
-<li><a href=/event/>Recent & Upcoming Talks</a></li>
+<li><a href=/event/>Recent & Upcoming Talks and Courses</a></li>
+<li><a href=/talk/mindful-eating-course/>Mindful Eating Course</a></li>
 <li><a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a></li>
 <li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
@@ -123,7 +127,6 @@
 <li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
 <li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
 <li><a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a></li>
-<li><a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a></li>
 </ul>
 </div>
 </div>
