--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -72,16 +72,19 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/event><span>Events</span></a>
+<a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
-<a class="nav-link active" href=/publication><span>Publications</span></a>
+<a class=nav-link href=/event><span>Events</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=/contacts><span>Contacts</span></a>
 </li>
 </ul>
 </div>
@@ -125,6 +128,49 @@ Laura Neefs</span>, <span>
 Tom Beckers</span>, <span>
 Lukas Van Oudenhove</span>, <span>
 Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief -- Scientific paper in preparation</a>
+</div>
+<a href=/publication/fasting_fmri/ class=summary-link>
+<div class=article-style>
+Scientific paper in preparation
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Lukas Van Oudenhove</span>, <span>
+Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a>
+</div>
+<a href=/publication/avoidance_leiden/ class=summary-link>
+<div class=article-style>
+Scientific paper in preparation
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>
 </div>
 </div>
 </div>
