--- a/roots-in-nature/index.html
+++ b/roots-in-nature/index.html
@@ -72,16 +72,19 @@ Nature might seem something far away from a scientist who spends most of her tim
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/event><span>Events</span></a>
+<a class=nav-link href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/publication><span>Publications</span></a>
+<a class=nav-link href=/event><span>Events</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
 <li class=nav-item>
 <a class="nav-link active" href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=/contacts><span>Contacts</span></a>
 </li>
 </ul>
 </div>
