--- a/publication/index.html
+++ b/publication/index.html
@@ -72,16 +72,19 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/event><span>Events</span></a>
+<a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
-<a class="nav-link active" href=/publication><span>Publications</span></a>
+<a class=nav-link href=/event><span>Events</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=/contacts><span>Contacts</span></a>
 </li>
 </ul>
 </div>
@@ -423,7 +426,20 @@ DOI
 </p>
 </div>
 </div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-0001">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-0001">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>
+</span>
+(0001).
+<a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a>.
+<p>
+</p>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-0001">
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
