--- a/publication/prolonged/index.html
+++ b/publication/prolonged/index.html
@@ -73,16 +73,19 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/event><span>Events</span></a>
+<a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
-<a class="nav-link active" href=/publication><span>Publications</span></a>
+<a class=nav-link href=/event><span>Events</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=/contacts><span>Contacts</span></a>
 </li>
 </ul>
 </div>
