--- a/404.html
+++ b/404.html
@@ -118,7 +118,6 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/event/>Recent & Upcoming Talks and Courses</a></li>
-<li><a href=/talk/mindful-eating-course/>Mindful Eating Course</a></li>
 <li><a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a></li>
 <li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
@@ -127,6 +126,7 @@
 <li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
 <li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
 <li><a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a></li>
+<li><a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a></li>
 </ul>
 </div>
 </div>
