deploy: b882815d5158e77a43ef61ed5f57a5cda305e5a7

--- a/404.html
+++ b/404.html
@@ -117,7 +117,7 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
-<li><a href=/event/>Recent & Upcoming Talks and Courses</a></li>
+<li><a href=/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a></li>
 <li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
