--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -170,7 +170,8 @@ Scientific paper in preparation
 <div class="stream-meta article-metadata">
 <div>
 <span class=author-highlighted>
-Silvia Papalini</span>
+Silvia Papalini</span>, <span>
+Van Minnen, A</span>
 </div>
 </div>
 </div>
