--- a/publication/avoidance_leiden/index.html
+++ b/publication/avoidance_leiden/index.html
@@ -116,7 +116,8 @@
 <div class=article-metadata>
 <div>
 <span class=author-highlighted>
-Silvia Papalini</span>
+Silvia Papalini</span>, <span>
+Van Minnen, A</span>
 </div>
 <span class=article-date>
 January 0001
