--- a/publication/index.html
+++ b/publication/index.html
@@ -431,7 +431,8 @@ DOI
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span class=author-highlighted>
-Silvia Papalini</span>
+Silvia Papalini</span>, <span>
+Van Minnen, A</span>
 </span>
 (0001).
 <a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a>.
