--- a/404.html
+++ b/404.html
@@ -117,16 +117,16 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
+<li><a href=/publication/>Publications</a></li>
+<li><a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a></li>
+<li><a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief -- Scientific paper in preparation</a></li>
 <li><a href=/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a></li>
-<li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
 <li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li>
 <li><a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
 <li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
 <li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
-<li><a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a></li>
-<li><a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a></li>
 </ul>
 </div>
 </div>
