deploy: e3a4dfdca9ebfbff7a9aff5214a4e8111af57d78

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -197,8 +197,8 @@ Esther Aarts</span>
 <div>
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
-M Ashoori,</span>, <span>
-J Zaman 3,</span>, <span>
+M Ashoori</span>, <span>
+J Zaman</span>, <span>
 Tom Beckers</span>, <span>
 Bram Vervliet</span>
 </div>
