--- a/publication/index.html
+++ b/publication/index.html
@@ -296,8 +296,8 @@ DOI
 <span class="article-metadata li-cite-author">
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
-M Ashoori,</span>, <span>
-J Zaman 3,</span>, <span>
+M Ashoori</span>, <span>
+J Zaman</span>, <span>
 Tom Beckers</span>, <span>
 Bram Vervliet</span>
 </span>
