--- a/publication/persistent/index.html
+++ b/publication/persistent/index.html
@@ -119,8 +119,8 @@
 <div>
 <span class=author-highlighted>
 Silvia Papalini</span>, <span>
-M Ashoori,</span>, <span>
-J Zaman 3,</span>, <span>
+M Ashoori</span>, <span>
+J Zaman</span>, <span>
 Tom Beckers</span>, <span>
 Bram Vervliet</span>
 </div>
