deploy: fb7585bd10c7c32ac327e6bcf03a9d67557ce722

--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -150,8 +150,7 @@ Scientific paper in preparation
 </a>
 <div class="stream-meta article-metadata">
 <div>
-<span class=author-highlighted>
-Silvia Papalini</span>, <span>
+<span>
 Van Minnen, A</span>
 </div>
 </div>
