--- a/publication/index.html
+++ b/publication/index.html
@@ -154,8 +154,7 @@ Book section
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
-<span class=author-highlighted>
-Silvia Papalini</span>, <span>
+<span>
 Van Minnen, A</span>
 </span>
 (2022).
