deploy: aa42319f1f44cff1c77f633b72783572004f6129

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -157,8 +157,14 @@ Bram Vervliet</span>
 </div>
 <div class="stream-meta article-metadata">
 <div>
-<span class=author-highlighted>
-Silvia Papalini</span>
+<span>
+Berthold-Losleben M</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Habel U</span>, <span>
+Losleben K</span>, <span>
+Schneider F</span>, <span>
+Amunts K</span>, <span>
+Kohn N</span>
 </div>
 </div>
 </div>
