--- a/publication/index.html
+++ b/publication/index.html
@@ -251,8 +251,14 @@ DOI
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
-<span class=author-highlighted>
-Silvia Papalini</span>
+<span>
+Berthold-Losleben M</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Habel U</span>, <span>
+Losleben K</span>, <span>
+Schneider F</span>, <span>
+Amunts K</span>, <span>
+Kohn N</span>
 </span>
 (2021).
 <a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a>.
