deploy: 3e8abc5d50ef04551553abf2f9d3a6e6fdb8543b

--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -151,7 +151,13 @@ Scientific paper in preparation
 <div class="stream-meta article-metadata">
 <div>
 <span>
-Van Minnen, A</span>
+De Kleine, R</span>, <span>
+Hutschemaekers, M</span>, <span>
+Hendriks, G</span>, <span>
+Kampman, M</span>, <span>
+Papalini, S</span>, <span>
+Van Minnen, A</span>, <span>
+Vervliet, B</span>
 </div>
 </div>
 </div>
