--- a/publication/index.html
+++ b/publication/index.html
@@ -155,7 +155,13 @@ Book section
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-Van Minnen, A</span>
+De Kleine, R</span>, <span>
+Hutschemaekers, M</span>, <span>
+Hendriks, G</span>, <span>
+Kampman, M</span>, <span>
+Papalini, S</span>, <span>
+Van Minnen, A</span>, <span>
+Vervliet, B</span>
 </span>
 (2022).
 <a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a>.
