deploy: 3928e82c9fe7ee226958e607369e59a3566b15c3

--- a/publication/avoidance_leiden/index.html
+++ b/publication/avoidance_leiden/index.html
@@ -121,8 +121,8 @@
 De Kleine, R</span>, <span>
 Hutschemaekers, M</span>, <span>
 Hendriks, G</span>, <span>
-Kampman, M</span>, <span>
-Papalini, S</span>, <span>
+Kampman, M</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
 Van Minnen, A</span>, <span>
 Vervliet, B</span>
 </div>
