--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -154,8 +154,8 @@ Scientific paper in preparation
 De Kleine, R</span>, <span>
 Hutschemaekers, M</span>, <span>
 Hendriks, G</span>, <span>
-Kampman, M</span>, <span>
-Papalini, S</span>, <span>
+Kampman, M</span>, <span class=author-highlighted>
+Silvia Papalini</span>, <span>
 Van Minnen, A</span>, <span>
 Vervliet, B</span>
 </div>
