deploy: 8bc6a885f3c8c78e3a933a454957f410ab8fbb4b

--- a/roots-in-nature/index.html
+++ b/roots-in-nature/index.html
@@ -6,16 +6,16 @@
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload='this.media="all"'>
 <meta name=author content="Silvia Papalini">
 <meta name=description content="In many ways, my approach to research and interest in mindful eating are connected to Nature.
 Nature might seem something far away from a scientist who spends most of her time in the LAB, but that is only partially true.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/roots-in-nature/>
 <meta name=theme-color content="#1565c0">
-<link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
+<link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload='this.media="all"'>
+<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload='this.media="all"'>
+<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload='this.media="all"'>
+<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload='this.media="all"' disabled>
 <link rel=stylesheet href=/css/wowchemy.3b3537b4a7657bb58aad14bdc71d3e48.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
@@ -28,32 +28,20 @@ Nature might seem something far away from a scientist who spends most of her tim
 <meta property="og:description" content="In many ways, my approach to research and interest in mindful eating are connected to Nature.
 Nature might seem something far away from a scientist who spends most of her time in the LAB, but that is only partially true."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
-<title>Roots in Nature | Silvia Papalini</title>
-</head>
-<body id=top data-spy=scroll data-offset=70 data-target=#TableOfContents class=page-wrapper data-wc-page-id=16e559fce92ed094739f2a51f4677b6b>
-<script src=/js/wowchemy-init.min.8f76bdc9e086322ed5147724ebba3d06.js></script>
+<title>Roots in Nature | Silvia Papalini</title></head><body id=top data-spy=scroll data-offset=70 data-target=#TableOfContents class=page-wrapper data-wc-page-id=16e559fce92ed094739f2a51f4677b6b>
+<script src=/js/wowchemy-init.min.13d3c1ccc66961c64e937f4e854fdd1e.js></script>
 <aside class=search-modal id=search>
 <div class=container>
 <section class=search-header>
 <div class="row no-gutters justify-content-between mb-3">
 <div class=col-6>
-<h1>Search</h1>
-</div>
-<div class="col-6 col-search-close">
+<h1>Search</h1></div><div class="col-6 col-search-close">
 <a class=js-search href=# aria-label=Close><i class="fas fa-times-circle text-muted" aria-hidden=true></i></a>
-</div>
-</div>
-<div id=search-box>
+</div></div><div id=search-box>
 <input name=q id=search-query placeholder=Search... autocapitalize=off autocomplete=off autocorrect=off spellcheck=false type=search class=form-control aria-label=Search...>
-</div>
-</section>
-<section class=section-search-results>
+</div></section><section class=section-search-results>
 <div id=search-hits>
-</div>
-</section>
-</div>
-</aside>
-<div class=page-header>
+</div></section></div></aside><div class=page-header>
 <header class=header--fixed>
 <nav class="navbar navbar-expand-lg navbar-light compensate-for-scrollbar" id=navbar-main>
 <div class=container-xl>
@@ -64,31 +52,21 @@ Nature might seem something far away from a scientist who spends most of her tim
 <ul class="navbar-nav d-md-inline-flex">
 <li class=nav-item>
 <a class=nav-link href=/><span>Home</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/about><span>About me</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/project><span>Projects</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/publication><span>Publications</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/event><span>Events</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class="nav-link active" href=/roots-in-nature><span>Roots in nature</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/contacts><span>Contacts</span></a>
-</li>
-</ul>
-</div>
-<ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+</li></ul></div><ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
 <li class="nav-item dropdown theme-dropdown">
 <a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label="Display preferences">
 <i class="fas fa-moon" aria-hidden=true></i>
@@ -103,75 +81,40 @@ Nature might seem something far away from a scientist who spends most of her tim
 <a href=# class="dropdown-item js-set-theme-auto">
 <span>Automatic</span>
 </a>
-</div>
-</li>
-</ul>
-</div>
-</nav>
-</header>
-</div>
-<div class=page-body>
+</div></li></ul></div></nav></header></div><div class=page-body>
 <article class=article>
 <div class=article-header>
 <img src=/media/roots.jpg width=960 height=199 class=article-banner alt="CCO Max Pixel">
 <span class=article-header-caption>CCO Max Pixel</span>
-</div>
-<div class="article-container pt-3">
-<h1>Roots in Nature</h1>
-<div class=article-metadata>
-</div>
-</div>
-<div class=article-container>
+</div><div class="article-container pt-3">
+<h1>Roots in Nature</h1><div class=article-metadata>
+</div></div><div class=article-container>
 <div class=article-style>
 <figure class=floatright>
 <div class="d-flex justify-content-center">
 <div class=w-100><img alt srcset="/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_db2a0959c0a9be4c5f8c8529f342225b.webp 400w,
 /roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_36e050ab4cd293473a96ddf9232fb35c.webp 760w,
-/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_1200x1200_fit_q75_h2_lanczos.webp 1200w" src=/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_db2a0959c0a9be4c5f8c8529f342225b.webp width=570 height=760 loading=lazy data-zoomable></div>
-</div></figure>
-<p>In many ways, my approach to research and interest in mindful eating are connected to Nature.</p>
-<p>Nature might seem something far away from a scientist who spends most of her time in the LAB, but that is only partially true. Fortunately, I had the greatest luck to grow up in a beautiful and peaceful place (Castell&rsquo;Azzara) in the middle of Italy, and to stay close to the work of one of my best teachers in life: my brother, Leo.</p>
-<p>Leo cultivates olive trees and produces fresh olive oil every year. His love and respect for Nature are so deeply honest that it is difficult to do not get inspired by the way he does his job (I would better call it passion or value). Leo is interested in learning how to help grow and reproduce the olive trees, follows courses to learn about the best ways of pruning in his geographic region, checks his olive trees every day to be sure they get enough water and nutrients that can protect them from diseases when seasons change or are particularly harsh. In few words, Leo built up his own LAB. I followed his teaching, picking &lsquo;my own&rsquo; trees of interest (people), but maintaining that way of connecting with and caring for nature.</p>
-<p>The fresh olive oil comes from his hard work of harvest in November (about 300 plants) when I and the rest of the family are trying to help him with some manual work. Yes, I said manual. Why? Leo wants to avoid damaging the trees during their production with aggressive machines that could break their branches. The olives are picked carefully, and brought as soon as possible to the local oil mill to avoid the formation of molds and bacteria. Once the olive oil is ready, he checks its color, odor, and density. He tastes the olive oil with all his senses, in silent connection with his body. My brother is a great mindful eating teacher on his own LAB and he doesn&rsquo;t know (and doesn&rsquo;t have to). During my mindful eating training in Norway, I could see a strong parallel between my brother&rsquo;s way to relate to food and eating and the teaching of the masters. It felt very familiar.</p>
-<p>Nature, the eternal mother, is a great place to find answers if you are connected to it; that&rsquo;s what Leo would tell me when difficult questions arise in life, either scientific or personal.</p>
-</div>
-</div>
-</article>
-</div>
-<div class=page-footer>
+/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_1200x1200_fit_q75_h2_lanczos.webp 1200w" src=/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_db2a0959c0a9be4c5f8c8529f342225b.webp width=570 height=760 loading=lazy data-zoomable></div></div></figure><p>In many ways, my approach to research and interest in mindful eating are connected to Nature.</p><p>Nature might seem something far away from a scientist who spends most of her time in the LAB, but that is only partially true. Fortunately, I had the greatest luck to grow up in a beautiful and peaceful place (Castell&rsquo;Azzara) in the middle of Italy, and to stay close to the work of one of my best teachers in life: my brother, Leo.</p><p>Leo cultivates olive trees and produces fresh olive oil every year. His love and respect for Nature are so deeply honest that it is difficult to do not get inspired by the way he does his job (I would better call it passion or value). Leo is interested in learning how to help grow and reproduce the olive trees, follows courses to learn about the best ways of pruning in his geographic region, checks his olive trees every day to be sure they get enough water and nutrients that can protect them from diseases when seasons change or are particularly harsh. In few words, Leo built up his own LAB. I followed his teaching, picking &lsquo;my own&rsquo; trees of interest (people), but maintaining that way of connecting with and caring for nature.</p><p>The fresh olive oil comes from his hard work of harvest in November (about 300 plants) when I and the rest of the family are trying to help him with some manual work. Yes, I said manual. Why? Leo wants to avoid damaging the trees during their production with aggressive machines that could break their branches. The olives are picked carefully, and brought as soon as possible to the local oil mill to avoid the formation of molds and bacteria. Once the olive oil is ready, he checks its color, odor, and density. He tastes the olive oil with all his senses, in silent connection with his body. My brother is a great mindful eating teacher on his own LAB and he doesn&rsquo;t know (and doesn&rsquo;t have to). During my mindful eating training in Norway, I could see a strong parallel between my brother&rsquo;s way to relate to food and eating and the teaching of the masters. It felt very familiar.</p><p>Nature, the eternal mother, is a great place to find answers if you are connected to it; that&rsquo;s what Leo would tell me when difficult questions arise in life, either scientific or personal.</p></div></div></article></div><div class=page-footer>
 <div class=container>
 <footer class=site-footer>
 <p class=powered-by>
 Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target=_blank rel=noopener>Wowchemy</a> — the free, <a href=https://github.com/wowchemy/wowchemy-hugo-themes target=_blank rel=noopener>open source</a> website builder that empowers creators.
-</p>
-</footer>
-</div>
-</div>
-<div id=modal class="modal fade" role=dialog>
+</p></footer></div></div><div id=modal class="modal fade" role=dialog>
 <div class=modal-dialog>
 <div class=modal-content>
 <div class=modal-header>
-<h5 class=modal-title>Cite</h5>
-<button type=button class=close data-dismiss=modal aria-label=Close>
+<h5 class=modal-title>Cite</h5><button type=button class=close data-dismiss=modal aria-label=Close>
 <span aria-hidden=true>&#215;</span>
 </button>
-</div>
-<div class=modal-body>
-<pre><code class="tex hljs"></code></pre>
-</div>
-<div class=modal-footer>
+</div><div class=modal-body>
+<pre><code class="tex hljs"></code></pre></div><div class=modal-footer>
 <a class="btn btn-outline-primary my-1 js-copy-cite" href=# target=_blank>
 <i class="fas fa-copy"></i> Copy
 </a>
 <a class="btn btn-outline-primary my-1 js-download-cite" href=# target=_blank>
 <i class="fas fa-download"></i> Download
 </a>
-<div id=modal-error></div>
-</div>
-</div>
-</div>
-</div>
-<script src=/js/vendor-bundle.min.b73dfaac3b6499dc997741748a7c3fe2.js></script>
+<div id=modal-error></div></div></div></div></div><script src=/js/vendor-bundle.min.3d946de2e8784a477845261d87025092.js></script>
 <script src=https://cdn.jsdelivr.net/gh/desandro/imagesloaded@v4.1.4/imagesloaded.pkgd.min.js integrity="sha512-S5PZ9GxJZO16tT9r3WJp/Safn31eu8uWrzglMahDT4dsmgqWonRY9grk3j+3tfuPr9WJNsfooOR7Gi7HL5W2jw==" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/gh/metafizzy/isotope@v3.0.6/dist/isotope.pkgd.min.js integrity="sha512-Zq2BOxyhvnRFXu0+WE6ojpZLOU2jdnqbrM1hmVdGzyeCa1DgM3X5Q4A/Is9xA1IkbUeDd7755dNNI/PzSf2Pew==" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/highlight.min.js integrity="sha512-Ypjm0o7jOxAd4hpdoppSEN0TQOC19UtPAqD+4s5AlXmUvbmmS/YMxYqAqarQYyxTnB6/rqip9qcxlNB/3U9Wdg==" crossorigin=anonymous></script>
@@ -190,7 +133,6 @@ Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target=_bl
 <script src=https://cdn.jsdelivr.net/gh/krisk/Fuse@v3.2.1/dist/fuse.min.js integrity="sha512-o38bmzBGX+hD3JHWUFCDA09btWaqrNmoJ3RXLlrysA7PP01Kgs4UlE4MhelE1v5dJR3+cxlR4qQlotsW7jKsnw==" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/gh/julmot/mark.js@8.11.1/dist/jquery.mark.min.js integrity="sha512-mhbv5DqBMgrWL+32MmsDOt/OAvqr/cHimk6B8y/bx/xS88MVkYGPiVv2ixKVrkywF2qHplNRUvFsAHUdxZ3Krg==" crossorigin=anonymous></script>
 <script id=page-data type=application/json>{"use_headroom":true}</script>
-<script src=/js/wowchemy-headroom.1cb9e2fc8399acee94eab837265b73bf.js type=module></script>
-<script src=/en/js/wowchemy.min.247fd8f54253895301106e3006f53f38.js></script>
-</body>
-</html>
+<script src=/js/wowchemy-headroom.208bf5db800f4a4e5a38cf3b67a99a51.js type=module></script>
+<script src=/en/js/wowchemy.min.63639926e24ecfb8040ea052c1077969.js></script>
+</body></html>
