--- a/404.html
+++ b/404.html
@@ -6,15 +6,15 @@
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload='this.media="all"'>
 <meta name=author content="Silvia Papalini">
 <meta name=description content="Experimental Psychologist, PhD">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/404.html>
 <meta name=theme-color content="#1565c0">
-<link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
+<link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload='this.media="all"'>
+<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload='this.media="all"'>
+<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload='this.media="all"'>
+<link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload='this.media="all"' disabled>
 <link rel=stylesheet href=/css/wowchemy.3b3537b4a7657bb58aad14bdc71d3e48.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
@@ -26,32 +26,20 @@
 <meta property="og:title" content="404 Page not found | Silvia Papalini">
 <meta property="og:description" content="Experimental Psychologist, PhD"><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
-<title>404 Page not found | Silvia Papalini</title>
-</head>
-<body id=top data-spy=scroll data-offset=70 data-target=#TableOfContents class=page-wrapper>
-<script src=/js/wowchemy-init.min.8f76bdc9e086322ed5147724ebba3d06.js></script>
+<title>404 Page not found | Silvia Papalini</title></head><body id=top data-spy=scroll data-offset=70 data-target=#TableOfContents class=page-wrapper>
+<script src=/js/wowchemy-init.min.13d3c1ccc66961c64e937f4e854fdd1e.js></script>
 <aside class=search-modal id=search>
 <div class=container>
 <section class=search-header>
 <div class="row no-gutters justify-content-between mb-3">
 <div class=col-6>
-<h1>Search</h1>
-</div>
-<div class="col-6 col-search-close">
+<h1>Search</h1></div><div class="col-6 col-search-close">
 <a class=js-search href=# aria-label=Close><i class="fas fa-times-circle text-muted" aria-hidden=true></i></a>
-</div>
-</div>
-<div id=search-box>
+</div></div><div id=search-box>
 <input name=q id=search-query placeholder=Search... autocapitalize=off autocomplete=off autocorrect=off spellcheck=false type=search class=form-control aria-label=Search...>
-</div>
-</section>
-<section class=section-search-results>
+</div></section><section class=section-search-results>
 <div id=search-hits>
-</div>
-</section>
-</div>
-</aside>
-<div class=page-header>
+</div></section></div></aside><div class=page-header>
 <header class=header--fixed>
 <nav class="navbar navbar-expand-lg navbar-light compensate-for-scrollbar" id=navbar-main>
 <div class=container-xl>
@@ -62,31 +50,21 @@
 <ul class="navbar-nav d-md-inline-flex">
 <li class=nav-item>
 <a class=nav-link href=/><span>Home</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/about><span>About me</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/project><span>Projects</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/publication><span>Publications</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/event><span>Events</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=/contacts><span>Contacts</span></a>
-</li>
-</ul>
-</div>
-<ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+</li></ul></div><ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
 <li class="nav-item dropdown theme-dropdown">
 <a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label="Display preferences">
 <i class="fas fa-moon" aria-hidden=true></i>
@@ -101,69 +79,32 @@
 <a href=# class="dropdown-item js-set-theme-auto">
 <span>Automatic</span>
 </a>
-</div>
-</li>
-</ul>
-</div>
-</nav>
-</header>
-</div>
-<div class=page-body>
+</div></li></ul></div></nav></header></div><div class=page-body>
 <div class="universal-wrapper pt-3">
-<h1>Page not found</h1>
-<form class="d-flex align-items-center mb-3">
+<h1>Page not found</h1><form class="d-flex align-items-center mb-3">
 <input name=q type=search class=form-control placeholder=Search... autocomplete=off>
-</form>
-<p>Perhaps you were looking for one of these?</p>
-<h2>Latest</h2>
-<ul>
-<li><a href=/publication/>Publications</a></li>
-<li><a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a></li>
-<li><a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief -- Scientific paper in preparation</a></li>
-<li><a href=/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a></li>
-<li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
-<li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li>
-<li><a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li>
-<li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li>
-<li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
-</ul>
-</div>
-</div>
-<div class=page-footer>
+</form><p>Perhaps you were looking for one of these?</p><h2>Latest</h2><ul>
+<li><a href=/publication/>Publications</a></li><li><a href=/publication/avoidance_leiden/>Impaired Action-Safety Learning And Excessive Relief During Elevated Avoidance In Anxiety Patients -- Scientific paper in preparation</a></li><li><a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief -- Scientific paper in preparation</a></li><li><a href=/event/>Recent & Upcoming Talks</a></li><li><a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a></li><li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li><li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li><li><a href=/publication/thinness/>The drive for thinness: Towards a mechanistic understanding of avoidance behaviors in a non-clinical population</a></li><li><a href=/publication/musical/>A short-term musical training affects implicit emotion regulation only in behaviour but not in brain activity</a></li><li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li></ul></div></div><div class=page-footer>
 <div class=container>
 <footer class=site-footer>
 <p class=powered-by>
 Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target=_blank rel=noopener>Wowchemy</a> — the free, <a href=https://github.com/wowchemy/wowchemy-hugo-themes target=_blank rel=noopener>open source</a> website builder that empowers creators.
-</p>
-</footer>
-</div>
-</div>
-<div id=modal class="modal fade" role=dialog>
+</p></footer></div></div><div id=modal class="modal fade" role=dialog>
 <div class=modal-dialog>
 <div class=modal-content>
 <div class=modal-header>
-<h5 class=modal-title>Cite</h5>
-<button type=button class=close data-dismiss=modal aria-label=Close>
+<h5 class=modal-title>Cite</h5><button type=button class=close data-dismiss=modal aria-label=Close>
 <span aria-hidden=true>&#215;</span>
 </button>
-</div>
-<div class=modal-body>
-<pre><code class="tex hljs"></code></pre>
-</div>
-<div class=modal-footer>
+</div><div class=modal-body>
+<pre><code class="tex hljs"></code></pre></div><div class=modal-footer>
 <a class="btn btn-outline-primary my-1 js-copy-cite" href=# target=_blank>
 <i class="fas fa-copy"></i> Copy
 </a>
 <a class="btn btn-outline-primary my-1 js-download-cite" href=# target=_blank>
 <i class="fas fa-download"></i> Download
 </a>
-<div id=modal-error></div>
-</div>
-</div>
-</div>
-</div>
-<script src=/js/vendor-bundle.min.b73dfaac3b6499dc997741748a7c3fe2.js></script>
+<div id=modal-error></div></div></div></div></div><script src=/js/vendor-bundle.min.3d946de2e8784a477845261d87025092.js></script>
 <script src=https://cdn.jsdelivr.net/gh/desandro/imagesloaded@v4.1.4/imagesloaded.pkgd.min.js integrity="sha512-S5PZ9GxJZO16tT9r3WJp/Safn31eu8uWrzglMahDT4dsmgqWonRY9grk3j+3tfuPr9WJNsfooOR7Gi7HL5W2jw==" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/gh/metafizzy/isotope@v3.0.6/dist/isotope.pkgd.min.js integrity="sha512-Zq2BOxyhvnRFXu0+WE6ojpZLOU2jdnqbrM1hmVdGzyeCa1DgM3X5Q4A/Is9xA1IkbUeDd7755dNNI/PzSf2Pew==" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/highlight.min.js integrity="sha512-Ypjm0o7jOxAd4hpdoppSEN0TQOC19UtPAqD+4s5AlXmUvbmmS/YMxYqAqarQYyxTnB6/rqip9qcxlNB/3U9Wdg==" crossorigin=anonymous></script>
@@ -182,7 +123,6 @@ Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target=_bl
 <script src=https://cdn.jsdelivr.net/gh/krisk/Fuse@v3.2.1/dist/fuse.min.js integrity="sha512-o38bmzBGX+hD3JHWUFCDA09btWaqrNmoJ3RXLlrysA7PP01Kgs4UlE4MhelE1v5dJR3+cxlR4qQlotsW7jKsnw==" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/gh/julmot/mark.js@8.11.1/dist/jquery.mark.min.js integrity="sha512-mhbv5DqBMgrWL+32MmsDOt/OAvqr/cHimk6B8y/bx/xS88MVkYGPiVv2ixKVrkywF2qHplNRUvFsAHUdxZ3Krg==" crossorigin=anonymous></script>
 <script id=page-data type=application/json>{"use_headroom":true}</script>
-<script src=/js/wowchemy-headroom.1cb9e2fc8399acee94eab837265b73bf.js type=module></script>
-<script src=/en/js/wowchemy.min.247fd8f54253895301106e3006f53f38.js></script>
-</body>
-</html>
+<script src=/js/wowchemy-headroom.208bf5db800f4a4e5a38cf3b67a99a51.js type=module></script>
+<script src=/en/js/wowchemy.min.63639926e24ecfb8040ea052c1077969.js></script>
+</body></html>
